--- a/app/src/main/res/layout/fragment_agendamento_manutencao.xml
+++ b/app/src/main/res/layout/fragment_agendamento_manutencao.xml
@@ -6,163 +6,41 @@
     android:layout_height="match_parent"
     tools:context=".ui.agendamentomanutencao.AgendamentoManutencaoFragment">
 
-    <CheckBox
-        android:id="@+id/box_area1"
-        android:layout_width="250dp"
+
+    <TextView
+        android:id="@+id/textChamados"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Área 1"
-        android:textColor="@color/md_theme_primary"
-        android:textSize="14sp"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/oxanium_semibold"
+        android:text="CHAMADOS"
+        android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
-
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Quartos e Corredores"
-        android:textColorLink="@color/md_theme_primaryVariant"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/box_area1" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cozinha e Restaurante"
-        android:textColorLink="@color/md_theme_primaryVariant"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/box_area3" />
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Outras áreas"
-        android:textColorLink="@color/md_theme_primaryVariant"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/box_area4" />
-
-    <CheckBox
-        android:id="@+id/box_area2"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Área 2"
-        android:textColor="@color/md_theme_primary"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
-
-    <CheckBox
-        android:id="@+id/box_area3"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Área 3"
-        android:textColor="@color/md_theme_primary"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Piscina e Sala de Jogos"
-        android:textColorLink="@color/md_theme_primaryVariant"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/box_area2" />
-
-    <CheckBox
-        android:id="@+id/box_area4"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
-        android:text="Área 4"
-        android:textColor="@color/md_theme_primary"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView4" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.05352798" />
-
-    <TextView
-        android:id="@+id/text_descricao"
-        android:layout_width="360dp"
-        android:layout_height="130dp"
-        android:layout_marginTop="8dp"
-        android:hint="Selecione a área desejada e descreva o problema"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/ic_agendamento_manutencao_geral"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView8"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
-        android:text="Manutenção"
-        android:textColor="@color/md_theme_primary"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="117dp"
-        android:layout_height="117dp"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/logo_sewil"
-        app:layout_constraintStart_toEndOf="@+id/box_area3"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/btn_manutencao"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ListView
+        android:id="@+id/listAreas"
+        android:layout_width="0dp"
+        android:layout_height="400dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="16dp"
-        android:text="Exibir  Manutenção "
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/btn_salvar"
-        app:layout_constraintTop_toBottomOf="@+id/text_descricao" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textChamados"
+        tools:listitem="@layout/list_view_chamados" />
 
     <Button
-        android:id="@+id/btn_salvar"
+        android:id="@+id/novoChamado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:text="Salvar"
-        app:layout_constraintStart_toStartOf="@+id/guideline"
-        app:layout_constraintTop_toBottomOf="@+id/text_descricao" />
+        android:layout_marginBottom="16dp"
+        android:text="Novo Chamado"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
