--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@id/nav_perfil">
+    app:startDestination="@id/nav_bem_vindo">
 
     <fragment
-        android:id="@+id/nav_perfil"
-        android:name="com.luanasilva.sewil.ui.perfil.PerfilFragment"
+        android:id="@+id/nav_bem_vindo"
+        android:name="com.luanasilva.sewil.ui.bem_vindo.LandingPageFragment"
         android:label="@string/menu_perfil"
-        tools:layout="@layout/fragment_perfil" />
+        tools:layout="@layout/fragment_landing_page" />
 
     <fragment
         android:id="@+id/nav_agendamento_manutencao"
@@ -24,20 +24,10 @@
         tools:layout="@layout/fragment_controle_estoque" />
 
     <fragment
-        android:id="@+id/nav_gestao_funcionarios"
-        android:name="com.luanasilva.sewil.ui.gestaofuncionarios.GestaoFuncionariosFragment"
-        android:label="@string/menu_gestao_funcionarios"
-        tools:layout="@layout/fragment_gestao_funcionarios" />
-    <fragment
         android:id="@+id/nav_quartos_limpeza_manutencao"
         android:name="com.luanasilva.sewil.ui.quartoslimpezamanutencao.QuartosLimpezaManutencaoFragment"
         android:label="@string/menu_quartos_limpeza_manutencao"
         tools:layout="@layout/fragment_quartos_limpeza_manutencao" />
-    <fragment
-        android:id="@+id/nav_agendamento_atividades"
-        android:name="com.luanasilva.sewil.ui.agendamentoatividades.AgendamentoAtividadesFragment"
-        android:label="@string/menu_agendamento_atividades"
-        tools:layout="@layout/fragment_agendamento_atividades" />
 
 
 </navigation>
