--- a/app/src/main/res/layout/fragment_agendamento_manutencao.xml
+++ b/app/src/main/res/layout/fragment_agendamento_manutencao.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textChamados"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/oxanium_semibold"
         android:text="CHAMADOS"
         android:textSize="24sp"
@@ -37,10 +37,10 @@
         android:id="@+id/novoChamado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
         android:text="Novo Chamado"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/listAreas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
