--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,11 +24,45 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab"
+
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_marginEnd="@dimen/fab_margin"
         android:layout_marginBottom="16dp"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+
+        android:clickable="true"
+        android:foregroundTint="#81929C"
+        app:backgroundTint="#102030"
+        app:backgroundTintMode="add"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="#81929C" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabMaisManutencao"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        android:cropToPadding="false"
+        android:foregroundGravity="center"
+        android:visibility="gone"
+        app:layout_anchor="@+id/fab"
+        app:layout_anchorGravity="right|top"
+        app:srcCompat="@drawable/ic_fab_manutencao"
+        app:useCompatPadding="true" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabMaisEstoque"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:clickable="true"
+        android:visibility="gone"
+        app:layout_anchor="@+id/fab"
+        app:layout_anchorGravity="start|left"
+        app:srcCompat="@drawable/ic_fab_estoque"
+        app:useCompatPadding="true" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
