Adicionado telas Limpeza

--- a/app/src/main/res/layout/activity_chamado_manutencao.xml
+++ b/app/src/main/res/layout/activity_chamado_manutencao.xml
@@ -12,8 +12,8 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="4dp"
-        android:layout_marginTop="32dp"
-        android:text="Área 1"
+        android:layout_marginTop="48dp"
+        android:text="@string/rea_1"
         android:textColor="@color/md_theme_primary"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="Piscina e Sala de Jogos"
+        android:text="@string/piscina_e_sala_de_jogos"
         android:textColorLink="@color/md_theme_primaryVariant"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="Cozinha e Restaurante"
+        android:text="@string/cozinha_e_restaurante"
         android:textColorLink="@color/md_theme_primaryVariant"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -47,7 +47,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="4dp"
-        android:text="Área 4"
+        android:text="@string/rea_4"
         android:textColor="@color/md_theme_primary"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -59,7 +59,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        android:text="Quartos e Corredores"
+        android:text="@string/quartos_e_corredores"
         android:textColorLink="@color/md_theme_primaryVariant"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/guideline"
@@ -70,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="Recepção e Sala de Espera"
+        android:text="@string/recep_o_e_sala_de_espera"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@+id/boxArea4" />
@@ -80,7 +80,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="4dp"
-        android:text="Área 3"
+        android:text="@string/rea_3"
         android:textColor="@color/md_theme_primary"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -92,7 +92,7 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="4dp"
-        android:text="Área 2"
+        android:text="@string/rea_2"
         android:textColor="@color/md_theme_primary"
         android:textSize="14sp"
         android:textStyle="bold"
@@ -111,7 +111,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Salvar"
+        android:text="@string/salvar"
         app:icon="@drawable/icon_save"
         app:layout_constraintEnd_toStartOf="@+id/btnCancelar"
         app:layout_constraintHorizontal_bias="0.5"
@@ -123,7 +123,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Cancelar"
+        android:text="@string/cancelar"
         app:icon="@drawable/ic_cancel"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -136,10 +136,10 @@
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="24dp"
         app:counterEnabled="true"
         app:counterMaxLength="175"
-        app:helperText="Ex.: o Quarto 246 solicita troca de toalhas."
+        app:helperText="Ex.: Quarto 26 necessita de novo chuveiro."
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -150,7 +150,7 @@
             android:id="@+id/textInputObservacoes"
             android:layout_width="match_parent"
             android:layout_height="95dp"
-            android:hint="Digite suas observações aqui"
+            android:hint="@string/digite_suas_observa_es_aqui"
             android:textColorHint="#ECC7C7" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -159,7 +159,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:text="Manutenção"
+        android:text="@string/manuten_o"
         android:textColor="@color/md_theme_primary"
         android:textSize="24sp"
         android:textStyle="bold"
