--- a/app/src/main/res/layout/fragment_quartos_limpeza_manutencao.xml
+++ b/app/src/main/res/layout/fragment_quartos_limpeza_manutencao.xml
@@ -7,110 +7,38 @@
     tools:context=".ui.quartoslimpezamanutencao.QuartosLimpezaManutencaoFragment">
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/textLimpeza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="85dp"
-        android:layout_marginTop="24dp"
-        android:text="Quartos Limpeza "
-        android:textColor="@color/md_theme_primary"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline4"
-        app:layout_constraintEnd_toStartOf="@+id/imageView6"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/oxanium_semibold"
+        android:text="LIMPEZA DE QUARTOS"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_quarto"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline5"
+    <ListView
+        android:id="@+id/listAreasLimpeza"
+        android:layout_width="0dp"
+        android:layout_height="400dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline4">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_quarto"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Digite o número do quarto" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/textLimpeza"
+        tools:listitem="@layout/list_view_limpeza" />
 
     <Button
-        android:id="@+id/btn_salvar_limpeza"
+        android:id="@+id/btnNovoChamadoLimpeza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:text="Salvar Limpeza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_limpeza" />
-
-    <TextView
-        android:id="@+id/text_exibir_limpeza"
-        android:layout_width="371dp"
-        android:layout_height="217dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="TextView"
+        android:text="Nova limpeza de quarto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_consultar_limpeza" />
-
-    <Button
-        android:id="@+id/btn_consultar_limpeza"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Consultar agenda diária de limpeza"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_salvar_limpeza" />
-
-    <ImageView
-        android:id="@+id/imageView6"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginEnd="85dp"
-        android:src="@drawable/ic_quartos_limpeza_manutencao"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:layout_editor_absoluteY="24dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="80dp" />
-
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/guideline5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_begin="173dp" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_limpeza"
-        android:layout_width="409dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:hint="Digite o turno da limpeza. ex: manhã"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline5">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_limpeza"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </com.google.android.material.textfield.TextInputLayout>
+        app:layout_constraintTop_toBottomOf="@+id/listAreasLimpeza" />
 </androidx.constraintlayout.widget.ConstraintLayout>
