--- a/app/src/main/res/layout/list_view_chamados.xml
+++ b/app/src/main/res/layout/list_view_chamados.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingBottom="4dp">
@@ -26,7 +25,7 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/textViewNomeArea"
+        android:id="@+id/textViewQuarto"
         android:layout_width="120dp"
         android:layout_height="52dp"
         android:layout_marginTop="8dp"
@@ -41,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textViewID"
+        android:id="@+id/textViewIDNumeroQuarto"
         android:layout_width="26dp"
         android:layout_height="26dp"
         android:clickable="true"
@@ -51,7 +50,7 @@
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/guideline14"
         app:layout_constraintStart_toStartOf="@+id/guideline12"
-        app:layout_constraintTop_toBottomOf="@+id/textViewNomeArea" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewQuarto" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline12"
