--- a/app/src/main/res/layout/activity_novo_chamado_limpeza.xml
+++ b/app/src/main/res/layout/activity_novo_chamado_limpeza.xml
@@ -68,7 +68,10 @@
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
-        android:text="@string/autocompletetextview"
+        android:dropDownWidth="wrap_content"
+        android:dropDownHeight="wrap_content"
+        android:hint="Ex.: 11"
+        android:inputType="number"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textDigiteNumeroQuarto" />
@@ -104,7 +107,7 @@
         android:layout_marginTop="48dp"
         android:layout_marginEnd="32dp"
         app:counterEnabled="true"
-        app:counterMaxLength="175"
+        app:counterMaxLength="100"
         app:helperText="Ex.: o Quarto 246 solicita troca de toalhas."
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
