--- a/app/src/main/res/layout/list_view_chamados.xml
+++ b/app/src/main/res/layout/list_view_chamados.xml
@@ -6,7 +6,7 @@
     android:paddingBottom="4dp">
 
     <TextView
-        android:id="@+id/textViewObservacoes"
+        android:id="@+id/textViewObservacoesLimpeza"
         android:layout_width="236dp"
         android:layout_height="74dp"
         android:layout_marginStart="10dp"
