--- a/app/src/main/res/layout/fragment_controle_estoque.xml
+++ b/app/src/main/res/layout/fragment_controle_estoque.xml
@@ -6,33 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".ui.controleestoque.ControleEstoqueFragment">
 
+
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/textChamados"
         android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_marginTop="64dp"
-        android:gravity="center"
-        android:text="Controle de Estoque"
-        android:textColor="@color/md_theme_primary"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/oxanium_semibold"
+        android:text="ESTOQUE"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/imageView4"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="34dp"
-        android:layout_height="34dp"
-        android:layout_marginTop="64dp"
-        android:src="@drawable/ic_controle_de_estoque"
-        app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline2"
         android:layout_width="wrap_content"
@@ -61,7 +48,7 @@
         android:id="@+id/btn_Item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="8dp"
         android:text="Criar item no estoque"
         app:layout_constraintBottom_toBottomOf="parent"
