--- a/app/src/main/res/layout/fragment_quartos_limpeza_manutencao.xml
+++ b/app/src/main/res/layout/fragment_quartos_limpeza_manutencao.xml
@@ -36,6 +36,7 @@
         android:id="@+id/btnNovoChamadoLimpeza"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
         android:text="Nova limpeza de quarto"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
